--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <link rel="stylesheet" href="main.css" type="text/css" />
 
-    <head user-scalable="no">
+    <head user-scalable=no>
         <title>Hometown</title>
         <script src="./javascript/canvas.js" defer></script>
         <script src="./javascript/prompt.js" defer></script>
