changing sizes of canvas

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -221,7 +221,7 @@
             <div align="center">
                 <h2>
                     <img id="canvasForPrompt" alt="Text for giving prompt inspiration"
-                    width="40%" height="30%">
+                    width="60%" height="50%">
                     </img>
                 </h2>
             </div>
@@ -306,7 +306,7 @@
           <!--Set up canvas & quick version of setting up fabric-->
             <div align="center">
 
-                <canvas id="canvas" width="600%" height="400%" style="border:1px solid #000000;"></canvas>
+                <canvas id="canvas" width="relative" height="relative" style="border:1px solid #000000;"></canvas>
                 <script src="https://cdn.jsdelivr.net/npm/fabric"></script>
                 
                 <label for="colorpicker" style="color:white">Change Color:</label>
