changing size of prompt box and other

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -6,7 +6,8 @@
         <title>Hometown</title>
         <script src="./javascript/canvas.js" defer></script>
         <script src="./javascript/prompt.js" defer></script>
-        <meta name="viewport" content="width=device-width, user-scalable=no">
+        <meta name="viewport" content="width=device-width, user-scalable=no, intial-scale=1">
+        
     </head>
     
     <body>
