--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -436,8 +436,8 @@
            
             <table align="center">
                 <tr>
-                    <td class="bookButton"><button class="box" id="book1" onclick="book1Clicked()"></button></td>
-                    <td class="bookButton"><button class="box" id="book2" onclick="book2Clicked()"></button></td>
+                    <td class="bookButton"><button class="box" id="book1Box" onclick="book1Clicked()"></button></td>
+                    <td class="bookButton"><button class="box" id="book2Box" onclick="book2Clicked()"></button></td>
                     <td class="bookButton" id="book3" style="display:none;"><button class="box" id="book3Box" onclick="book3Clicked()"></button></td>
                 </tr>
                 <tr>
@@ -661,38 +661,47 @@
 
             function book1Clicked(){
                 socket.emit("bookClicked", 1, socket.id);
+                document.getElementById("book1Box").innerHTML += "<br/>(seen)"
             }
 
             function book2Clicked(){
                 socket.emit("bookClicked", 2, socket.id);
+                document.getElementById("book2Box").innerHTML += "<br/>(seen)"
             }
 
             function book3Clicked(){
                 socket.emit("bookClicked", 3, socket.id);
+                document.getElementById("book3Box").innerHTML += "<br/>(seen)"
             }
 
             function book4Clicked(){
                 socket.emit("bookClicked", 4, socket.id);
+                document.getElementById("book4Box").innerHTML += "<br/>(seen)"
             }
 
             function book5Clicked(){
                 socket.emit("bookClicked", 5, socket.id);
+                document.getElementById("book5Box").innerHTML += "<br/>(seen)"
             }
 
             function book6Clicked(){
                 socket.emit("bookClicked", 6, socket.id);
+                document.getElementById("book6Box").innerHTML += "<br/>(seen)"
             }
 
             function book7Clicked(){
                 socket.emit("bookClicked", 7, socket.id);
+                document.getElementById("book7Box").innerHTML += "<br/>(seen)"
             }
 
             function book8Clicked(){
                 socket.emit("bookClicked", 8, socket.id);
+                document.getElementById("book8Box").innerHTML += "<br/>(seen)"
             }
 
             function book9Clicked(){
                 socket.emit("bookClicked", 9, socket.id);
+                document.getElementById("book9Box").innerHTML += "<br/>(seen)"
             }
 
             /* Results Page Navigation */
@@ -827,23 +836,39 @@
                 switchView("playerEndGameResults");
             });
 
-            socket.on("mainToEndgame", function(game) {
+            /* Switches the main screen to where it chooses the book to view the results of. */
+            socket.on("mainToEndgame", function() {
                 switchView("endGameChoose");
+            });
+
+            /* Makes visible the books based on the number of players, and
+                puts the player name on the books (Only allow to do once) */
+            socket.on("putNamesOnBooks", function(game) {
+                document.getElementById("book1Box").innerHTML = game.players[0].username;
+                document.getElementById("book2Box").innerHTML = game.players[1].username;
                 if (3 <= game.numPlayers) {
                     document.getElementById("book3").style.display = 'block';
+                    document.getElementById("book3Box").innerHTML = game.players[2].username;
                     if (4 <= game.numPlayers) {
                         document.getElementById("book4").style.display = 'block';
+                        document.getElementById("book4Box").innerHTML = game.players[3].username;
                         if (5 <= game.numPlayers) {
                             document.getElementById("book5").style.display = 'block';
+                            document.getElementById("book5Box").innerHTML = game.players[4].username;
                             if (6 <= game.numPlayers) {
                                 document.getElementById("book6").style.display = 'block';
+                                document.getElementById("book6Box").innerHTML = game.players[5].username;
                                 if (7 <= game.numPlayers) {
                                     document.getElementById("book7").style.display = 'block';
+                                    document.getElementById("book7Box").innerHTML = game.players[6].username;
                                     if (8 <= game.numPlayers) {
                                         document.getElementById("book8").style.display = 'block';
-                                        if (6 <= game.numPlayers) {
+                                        document.getElementById("book8Box").innerHTML = game.players[7].username;
+                                        if (9 <= game.numPlayers) {
                                             document.getElementById("book9").style.display = 'block';
-                                        }}}}}}}});
+                                            document.getElementById("book9Box").innerHTML = game.players[8].username;
+                                        }}}}}}}
+            });
 
                                         
             //how do we want to call this?
