changed size of final disploay canvas

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -486,7 +486,7 @@
             <div class="container">
                 <button class="arrow-button left" id="canvasLeftArrow" onclick="canvasLeftArrowClicked()">&lt;</button>
                 <img id="endGameCanvas"
-                    width="1000" height="500">
+                    width="70%" height="70%">
                 </img>
                 <button class="arrow-button right" id="canvasRightArrow" onclick="canvasRightArrowClicked()">&gt;</button>
               </div>
