--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -752,6 +752,22 @@
 
             /* Socket Functionality */
 
+            socket.on("enterPrompt", function() {
+                const promptValue = document.getElementById("prompt").value;
+                if(promptValue != ""){
+                    enterPromptButtonClicked();
+                }
+                else{
+                    enterPromptButtonClicked2();
+                }
+            });
+
+
+            socket.on("enterCanvas", function() {
+                enterCanvasButtonClicked();
+            });
+
+
             socket.on("roomCreated", function(lobbyID) {
                 switchView("lobbyPage");
 
@@ -965,10 +981,13 @@
                 document.getElementById("timerLabel2").innerHTML = 0 + "m " + 30 + "s ";
 
                 //startDate.setMinutes(startDate.getMinutes() + 1);
-                startDate.setSeconds(startDate.getSeconds() + 31);
+                //startDate.setSeconds(startDate.getSeconds() + 31);
+                startDate.setSeconds(startDate.getSeconds() + 11);
+
                 
                 if (page == 'prompt'){
-                    startDate.setMinutes(startDate.getMinutes() + 1);
+                    //startDate.setMinutes(startDate.getMinutes() + 1);
+                    startDate.setSeconds(startDate.getSeconds() + 20);
                 }
                 var x = setInterval(function() {
                     if (game.timerStatus == true){
