--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -63,8 +63,8 @@
                     Welcome to PictaPhone. PictaPhone is a drawing version of the classic game, Telephone. 
                     The game will consist of multiple rounds that are either prompt rounds or 
                     drawing rounds. In the 
-                    initial prompt round, players will have to come up with a prompt. Then it will be a drawing round
-                    Player must draw a picture that they 
+                    initial prompt round, players will have to come up with a prompt. Then the drawing round will commence
+                    where players must draw a picture that they 
                     believe best represents the random prompt that they were given. Similarly,
                     the following round 
                     will involve each player getting a random drawn picture they will have to 
@@ -977,10 +977,10 @@
                 //console.log("here");
                 //var startDate = new Date();
                 var startDate = new Date(start);
-                document.getElementById("timerLabel2").innerHTML = 0 + "m " + 30 + "s ";
+                document.getElementById("timerLabel2").innerHTML = 0 + "m " + 45 + "s ";
 
                 //startDate.setMinutes(startDate.getMinutes() + 1);
-                startDate.setSeconds(startDate.getSeconds() + 31);
+                startDate.setSeconds(startDate.getSeconds() + 46);
                 //startDate.setSeconds(startDate.getSeconds() + 11);
 
                 
