--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -684,58 +684,42 @@
 
             function book2Clicked(){
                 socket.emit("bookClicked", 2, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book2Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book2Box").innerHTML += "<br/>(seen)"
             }
 
             function book3Clicked(){
                 socket.emit("bookClicked", 3, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book3Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book3Box").innerHTML += "<br/>(seen)"
             }
 
             function book4Clicked(){
                 socket.emit("bookClicked", 4, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book4Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book4Box").innerHTML += "<br/>(seen)"
             }
 
             function book5Clicked(){
                 socket.emit("bookClicked", 5, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book5Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book5Box").innerHTML += "<br/>(seen)"
             }
 
             function book6Clicked(){
                 socket.emit("bookClicked", 6, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book6Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book6Box").innerHTML += "<br/>(seen)"
             }
 
             function book7Clicked(){
                 socket.emit("bookClicked", 7, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book7Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book7Box").innerHTML += "<br/>(seen)"
             }
 
             function book8Clicked(){
                 socket.emit("bookClicked", 8, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book8Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book8Box").innerHTML += "<br/>(seen)"
             }
 
             function book9Clicked(){
                 socket.emit("bookClicked", 9, socket.id);
-                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
-                    document.getElementById("book9Box").innerHTML += "<br/>(seen)"
-                }
+                document.getElementById("book9Box").innerHTML += "<br/>(seen)"
             }
 
             /* Results Page Navigation */
@@ -762,9 +746,11 @@
             socket.on("enterPrompt", function() {
                 const promptValue = document.getElementById("prompt").value;
                 if(promptValue != ""){
+                    console.log("entering enterPromptButtonClicked()");
                     enterPromptButtonClicked();
                 }
                 else{
+                    console.log("entering enterPromptButton2Clicked()");
                     enterPromptButtonClicked2();
                 }
             });
