--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -680,47 +680,65 @@
 
             function book1Clicked(){
                 socket.emit("bookClicked", 1, socket.id);
-                document.getElementById("book1Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book1Box").innerHTML.includes("seen")) {
+                    document.getElementById("book1Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book2Clicked(){
                 socket.emit("bookClicked", 2, socket.id);
-                document.getElementById("book2Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book2Box").innerHTML.includes("seen")) {
+                    document.getElementById("book2Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book3Clicked(){
                 socket.emit("bookClicked", 3, socket.id);
-                document.getElementById("book3Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book3Box").innerHTML.includes("seen")) {
+                    document.getElementById("book3Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book4Clicked(){
                 socket.emit("bookClicked", 4, socket.id);
-                document.getElementById("book4Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book4Box").innerHTML.includes("seen")) {
+                    document.getElementById("book4Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book5Clicked(){
                 socket.emit("bookClicked", 5, socket.id);
-                document.getElementById("book5Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book5Box").innerHTML.includes("seen")) {
+                    document.getElementById("book5Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book6Clicked(){
                 socket.emit("bookClicked", 6, socket.id);
-                document.getElementById("book6Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book6Box").innerHTML.includes("seen")) {
+                    document.getElementById("book6Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book7Clicked(){
                 socket.emit("bookClicked", 7, socket.id);
-                document.getElementById("book7Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book7Box").innerHTML.includes("seen")) {
+                    document.getElementById("book7Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book8Clicked(){
                 socket.emit("bookClicked", 8, socket.id);
-                document.getElementById("book8Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book8Box").innerHTML.includes("seen")) {
+                    document.getElementById("book8Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             function book9Clicked(){
                 socket.emit("bookClicked", 9, socket.id);
-                document.getElementById("book9Box").innerHTML += "<br/>(seen)"
+                if (!document.getElementById("book9Box").innerHTML.includes("seen")) {
+                    document.getElementById("book9Box").innerHTML += "<br/>(seen)"
+                }
             }
 
             /* Results Page Navigation */
