Made small error fixes to app.js, still haven't resolved screens not switching upon player disconnect#

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -876,6 +876,7 @@
 
             socket.on("playerToCanvas", function() {
                 // startTimer = true;
+                console.log("we're in the socket receiving 'player to canvas'");
                 clearCanvas();
                 document.getElementById("colorpicker").value="#000000";
                 document.getElementById("sizepicker").value="5";
