--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -820,6 +820,11 @@
                 document.getElementById("gameFullStatus").innerHTML = "Sorry, the game you are trying to join is full!";
             });
 
+            socket.on("htmlLog", function() {
+                socket.emit("wow");
+                // switchView("mainPage");
+            });
+
 
             socket.on("addPlayerToWaitingList", function(players) {
                 playerUsernames = players.map((player) => player.username);
