added some description

--- a/public/betasCombined.html
+++ b/public/betasCombined.html
@@ -212,7 +212,8 @@
             <div align="center">
 
                 <h1>
-                    Give us your best prompt!
+                    Come up with a creative prompt that your friends 
+                    will enjoy! Give us your best prompt!
                 </h1>
 
                 <textarea name="text" id="prompt" rows="6"  wrap="soft" maxlength="100" placeholder="Enter Prompt Here"> </textarea>
